<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey">

    <Button
        android:id="@+id/button2"
        android:layout_width="117dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:onClick="Clicked"
        android:text="@string/submit_truck"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.502"
        android:layout_marginTop="85dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:id="@+id/name_text"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:text="@string/truck_name_label"
            android:textColor="@color/new_truck_label_color"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_text"
            android:textColorHint="@color/light_grey"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:inputType="text" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:paddingLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="22dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:textColor="@color/new_truck_label_color"
            android:text="@string/truck_source"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/source_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_text"
            android:paddingLeft="5dp"
            android:textSize="15sp"
            android:textColorHint="@color/light_grey"
            android:textColor="@color/white"
            android:inputType="text"
            android:layout_weight="0.97" />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/search_icon"
            android:background="@color/dark_grey"
            android:onClick="source_pos_auto_search"/>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/linearLayout3"
        android:paddingLeft="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="22dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:text="@string/truck_destination"
            android:textColor="@color/new_truck_label_color"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />

        <EditText
            android:id="@+id/dest_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_text"
            android:inputType="text"
            android:paddingLeft="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/light_grey"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp"
            android:layout_weight="0.98" />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/search_icon"
            android:background="@color/dark_grey"
            android:onClick="dest_pos_auto_search"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:paddingLeft="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:text="@string/driver_name_label"
            android:textSize="15sp"
            android:textColor="@color/new_truck_label_color"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />

        <EditText
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textColorHint="@color/light_grey"
            android:id="@+id/driver_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_text"
            android:inputType="text"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:paddingLeft="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:text="@string/driver_number_label"
            android:textSize="15sp"
            android:textColor="@color/new_truck_label_color"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />

        <EditText
            android:id="@+id/phone_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_text"
            android:inputType="phone"
            android:textColor="@color/white"
            android:textColorHint="@color/light_grey"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>





